
2009-04-28 (dazjorz)
 * Fixed stats.php to make a list of all types, sorted by the order as
 returned by validTypes, without leaving types out.
 * Added to stats.php to do the same with statuses.
 * Added to stats.php to get the number of developers and developers with
 e-mail address set.
 * Added a nice Smarty template for stats.php so the page looks a lot better.
 * Added stats.php to lbinfo in lbheader.tpl.
 * Added a little notice on simply replying to devremark.tpl.
 * Added LIKEBACK_VERSION (as lbversion) as an assigned variable to Smarty
 * Added (unused) db_fetch_array and db_fetchAllArray to db.php

2009-04-27 (dazjorz)
 * Added a simple e-mail gateway application which doesn't really change
 anything yet, just parses the e-mail.
 * Fixed a bug in view.php and options.php where the scripts would die if
 tables were empty.
 * Added a sectionelse to viewfilters.tpl if there are no known locales.
 * Added a sectionelse to commenttable.tpl to say "no comments could be
 found".
 * Made db.php output a warning if a query failed, if LIKEBACK_PRODUCTION
 isn't enabled.

2009-04-27 (valerio)
 * Gave the header an overhaul.

2009-04-26 (dazjorz)
 * When a developer changes status through newRemark, the e-mail now displays
 the real message for that status (messageForStatus).
 * The select box on the newRemark form now displays the real messages for
 the statuses.
 * Fixed checking if an e-mail should be sent to the user.
 * Added the status change message to an e-mail to the reporter, if any.
 * Fixed the information message when both the status was changed and an
 e-mail to the reporter was sent.
 * Moved Smarty function registering to functions.php, added 'message' Smarty
 modifier.
 * Changed LikeBack version setting to 1.2-svn.
 * Removed support for Javascript powered status changing, status changes
 should be done via the newRemarks form now.
 * More correctly templatized comment showing (html/comment.tpl).